# cpp-relational-db

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/access/: record.h
include/access/heap/: heap_file.h  heap_iterator.h  heapam.h
include/catalog/: catalog.h  catalog_bootstrap.h  catalog_codec.h  catalog_table_base.h  catalog_tables.h  catalog_types.h
include/common/: tuple.h  value.h
include/config/: config.h
include/executor/: executor.h  operator.h  predicate.h
include/executor/operators/: filter_op.h  limit_op.h  projection_op.h  seq_scan_op.h
include/model/: dynamic_codec.h  relation.h  table_manager.h  user_table.h
include/optimiser/: optimiser.h
include/parser/: ast.h  parser.h
include/planner/logical/: logical_limit.h  logical_plan.h  logical_planner.h  logical_project.h  logical_scan.h
include/planner/logical/nodes/: filter.h  limit.h  project.h  scan.h
include/planner/physical/: physical_planner.h
include/server/: server.h
include/storage/: disk_manager.h
include/storage/buffer_manager/: buffer_manager.h  frame.h  free_list.h
include/storage/buffer_manager/replacement_policies/: clock_policy.h  replacement.h
include/storage/disk_manager/: disk_manager.h  idisk_manager.h
include/storage/page/: slotted_page.h
include/util/: data.h  uuid.h
src/access/heap/: README.md  heap_file.cpp  heap_iterator.cpp
src/catalog/: README.md  catalog.cpp  catalog_codec.cpp  catalog_tables.cpp
src/common/: tuple.cpp
src/executor/: README.md  executor.cpp  predicate.cpp
src/executor/operators/: filter_op.cpp  limit_op.cpp  projection_op.cpp  seq_scan_op.cpp
src/model/: README.md  dynamic_codec.cpp  relation.cpp  table_manager.cpp  user_table.cpp
src/planner/physical/: physical_planner.cpp
src/server/: README.md  server.cpp
src/storage/: README.md  disk_manager.cpp
src/storage/buffer_manager/: README.md  buffer_manager.cpp  free_list.cpp
src/storage/buffer_manager/replacement_policies/: CLOCK_POLICY.md  clock_policy.cpp
src/storage/disk_manager/: README.md  disk_manager.cpp  main.cpp
src/storage/page/: README.md  slotted_page.cpp
tests/access/heap/: test_heap_file.cpp  test_heap_iterator.cpp
tests/catalog/: test_catalog.cpp  test_catalog_codec.cpp  test_catalog_tables.cpp
tests/executor/: test_db_helper.h  test_executor.cpp  test_filter_op.cpp  test_limit_op.cpp  test_projection_op.cpp  test_seq_scan_op.cpp
tests/model/: test_dynamic_codec.cpp  test_table_manager.cpp  test_user_table.cpp
tests/server/: test_server.cpp
tests/storage/: test_disk_manager.cpp
tests/storage/buffer_manager/: test_buffer_manager.cpp  test_clock.cpp  test_free_list.cpp
tests/storage/disk_manager/: test_disk_manager.cpp
tests/storage/mocks/: disk_manager_mock.h
tests/storage/page/: test_slotted_page.cpp
